tests/cases/fail/inheritance_duplicate_field.p4
class Animal:
    name: str

class Dog(Animal):
    name: str
